k8s/gateway/httproute-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloud-cost-frontend-route
  namespace: cloud-cost
spec:
  parentRefs:
    - name: cloud-cost-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cloud-cost-frontend-service
          port: 8080
